--- a/main.css
+++ b/main.css
@@ -154,24 +154,29 @@ p > span {
     height: 100%;
     width: 350px;
     text-align: left;
-    padding: 50px 20px 5px 20px;
+    padding: 40px 20px 5px 20px;
     margin: 5px;
     color: #05668d;
 }
 
-.about_title {
+.about_header {
     display: flex;
     flex-direction: row;
     align-content: space-evenly;
-    padding: 15px 0 15px 0;
+    padding: 20% 20px 20px 20px;
+    color: #427aa1;
+    background-color: #ebf2fa;
+    border-bottom: 1px solid #a5be00;
     width: 100%;
 
 }
-.about_title h1 {
+.about_header h1 {
     flex: 1;
     align-self: center;
+    padding-left: 2;
+
 }
-.about_title > img {
+.about_header > img {
     flex: 1;
     align-self: center;
     max-width: 150px;
@@ -327,11 +332,12 @@ p > span {
     padding: 15% 0 0 0;
     width: 100%;
     background-color: #ebf2fa;
+    border: 1px solid #a5be00;
 }
 
 .detail_header > img {
     max-width: 100%;
-    border: 1px solid #ebf2fa;
+    border-bottom: 1px solid #ebf2fa;
     border-radius: 5px;
 }
 .ph1 {
@@ -379,7 +385,7 @@ p > span {
         width: 425px;
         min-height: 300px;
     }
-    .about_title > img {
+    .about_header > img {
         max-width: 200px;
         margin-right: 15px;
     }
