--- a/main.css
+++ b/main.css
@@ -74,11 +74,6 @@ nav {
     height: 45px;
     width: 45px;
 }
-/*.td3_logo:hover {*/
-    /*background: url('./images/td3_logo_white_green_32x32.png') no-repeat left center;*/
-    /*height: 32px;*/
-    /*width: 32px;*/
-/*}*/
 
 .logo {
     flex: 1;
@@ -110,7 +105,7 @@ main {
 
 .main_header {
     margin-bottom: 5px;
-    padding: 15% 20px 20px 20px;
+    padding: 20% 20px 20px 20px;
     width: 100%;
     background-color: #ebf2fa;
     box-shadow: 0 2px 2px -2px #a5be00;
@@ -147,7 +142,7 @@ p > span {
     top: 0;
     left: 0;
     overflow-x: hidden;
-    padding: 52px 0 1px 0;
+    padding: 65px 0 0 0;
 }
 
 .landing {
@@ -221,43 +216,6 @@ p > span {
     color: #05668d;
 }
 
-.about {
-    position: relative;
-    height: 100%;
-    width: 350px;
-    text-align: left;
-    padding: 40px 20px 5px 20px;
-    margin: 5px;
-    color: #05668d;
-}
-
-.about_header {
-    display: flex;
-    flex-direction: row;
-    align-content: space-evenly;
-    padding: 20% 20px 20px 20px;
-    color: #427aa1;
-    background-color: #ebf2fa;
-    border-bottom: 1px solid #a5be00;
-    width: 100%;
-
-}
-.about_header h1 {
-    flex: 1;
-    align-self: center;
-    padding-left: 2px;
-
-}
-.about_header > img {
-    flex: 1;
-    align-self: center;
-    max-width: 150px;
-    height: auto;
-    /*margin: 5px 20px 5px 5px;;*/
-    border: 1px solid #ebf2fa;
-    border-radius: 50%;
-}
-
 .nav_button {
     padding: 15px;
     background-color: #427aa1;
@@ -287,6 +245,10 @@ p > span {
     text-align: left;
     color: #05668d;
     padding: 0 20px 0 20px;
+}
+
+.detail_content > h4, p {
+    padding: 5px 0 5px 0;
 }
 
 .demo_ul {
@@ -355,7 +317,7 @@ p > span {
     position: absolute;
     width: 100%;
     top: 0;
-    padding: 0 25% 0 25%;
+    padding: 0 20% 0 20%;
     background-color: #ffffff;
     border-bottom: 1px solid #ebf2fa;
     border-radius: 1px;
@@ -401,7 +363,7 @@ p > span {
 }
 
 .detail_header {
-    padding: 15% 0 0 0;
+    padding: 19% 0 0 0;
     width: 100%;
     background-color: #ebf2fa;
     border: 1px solid #a5be00;
@@ -434,10 +396,6 @@ p > span {
 }
 
 @media only screen and (min-width: 525px) {
-    .about {
-        width: 500px;
-    }
-
     .detail {
         width: 500px;
     }
@@ -450,6 +408,10 @@ p > span {
         padding: 12% 20px 20px 20px;
     }
 
+    .detail_header {
+        padding: 5% 0 0 0;
+    }
+
     .ph1 {
         width: 425px;
     }
@@ -457,22 +419,17 @@ p > span {
         width: 425px;
         min-height: 300px;
     }
-    .about_header > img {
-        max-width: 200px;
-        margin-right: 15px;
-    }
 
     .landing {
         display: flex;
         flex-direction: column;
         width: 500px;
-        padding: 5% 0 20px 0;
+        padding: 7% 0 20px 0;
     }
 
     .landing_img > img {
         width: 500px;
     }
-
 }
 
 @media only screen and (min-width: 700px) {
