--- a/main.css
+++ b/main.css
@@ -75,6 +75,17 @@ nav {
     width: 45px;
 }
 
+.td3_logo {
+    background: url('./images/td3_logo_white_blue_45x45.png') no-repeat left center;
+    height: 45px;
+    width: 45px;
+    cursor: pointer;
+}
+
+.td3_logo:hover {
+    background: url('./images/td3_logo_white_green_45x45.png') no-repeat left center;
+}
+
 .logo {
     flex: 1;
     display: flex;
@@ -90,6 +101,7 @@ nav {
     justify-content: flex-end;
     padding: 10px;
     color: #ebf2fa;
+    cursor: pointer;
 }
 
 .fa-bars:hover {
@@ -101,11 +113,12 @@ main {
     flex-direction: column;
     align-items: center;
     height: 100%;
+    margin: 50px 0 0 0;
 }
 
 .main_header {
     margin-bottom: 5px;
-    padding: 20% 20px 20px 20px;
+    padding: 20px 20px 20px 20px;;
     width: 100%;
     background-color: #ebf2fa;
     box-shadow: 0 2px 2px -2px #a5be00;
@@ -148,10 +161,10 @@ p > span {
 .landing {
     display: flex;
     flex-direction: column;
-    width: 350px;
+    width: 318px;
     /*position: relative;*/
     /*z-index: 0;*/
-    padding: 20% 5px 20px 5px;
+    padding: 20% 10px 20px 10px;
 }
 
 .landing .h3{
@@ -207,7 +220,7 @@ p > span {
 
 .landing_img > img {
     align-self: center;
-    width: 350px;
+    width: 320px;
     height: auto;
 }
 
@@ -241,7 +254,7 @@ p > span {
 }
 
 .detail_content {
-    width: 350px;
+    width: 318px;
     text-align: left;
     color: #05668d;
     padding: 0 20px 0 20px;
@@ -363,7 +376,7 @@ p > span {
 }
 
 .detail_header {
-    padding: 19% 0 0 0;
+    padding: 20px 0 0 0;
     width: 100%;
     background-color: #ebf2fa;
     border: 1px solid #a5be00;
@@ -376,7 +389,7 @@ p > span {
 }
 .ph1 {
     text-align: left;
-    width: 325px;
+    width: 318px;
     padding: 20px 0 10px 0;
     /*margin: 5px;*/
     color: #05668d;
@@ -385,7 +398,7 @@ p > span {
 .project {
     position: relative;
     min-height: 200px;
-    width: 325px;
+    width: 318px;
     padding: 0;
     margin: 0 0 30px 0;
     color: #05668d;
@@ -402,14 +415,6 @@ p > span {
 
     .detail_content{
         width: 500px;
-    }
-
-    .main_header {
-        padding: 12% 20px 20px 20px;
-    }
-
-    .detail_header {
-        padding: 5% 0 0 0;
     }
 
     .ph1 {
@@ -432,9 +437,4 @@ p > span {
     }
 }
 
-@media only screen and (min-width: 700px) {
-    .main_header {
-        padding: 5% 20px 20px 20px;
-    }
-}
 
