--- a/main.css
+++ b/main.css
@@ -99,7 +99,8 @@ nav {
     display: flex;
     align-self: center;
     justify-content: flex-end;
-    padding: 10px;
+    padding: 5px;
+    margin-right: 5px;
     color: #ebf2fa;
     cursor: pointer;
 }
@@ -170,7 +171,8 @@ p > span {
 .nav_bar_social_li {
     flex: 1;
     display: flex;
-    padding: 0 15px 0 15px;
+    align-self: center;
+    padding: 5px 15px 0 15px;
 }
 
 .nav_panel {
@@ -274,6 +276,7 @@ p > span {
 }
 
 .nav_bar_button {
+    align-self: center;
     padding: 15px;
     background-color: #05668d;
     color: #ebf2fa;
@@ -464,8 +467,8 @@ p > span {
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        float: none;
         visibility: visible;
+        margin-right: 5px;
     }
 
     .hamburger {
