--- a/main.css
+++ b/main.css
@@ -90,6 +90,18 @@ nav {
     background: url('./images/postgresql_icon.png') no-repeat center center;
 }
 
+/*.html5_icon,*/
+/*.javascript_icon,*/
+/*.jquery_icon,*/
+/*.react_icon,*/
+/*.nodejs_icon,*/
+/*.postgresql_icon  {*/
+/*    max-width: 24px;*/
+/*    width: 24px;*/
+/*    max-height: 24px;*/
+/*    height: 24px;*/
+/*}*/
+
 .stack_icon_li > a {
     display:block;
 }
@@ -343,7 +355,8 @@ p > span {
     width: 318px;
     text-align: left;
     color: #05668d;
-    padding: 0 20px 0 20px;
+    margin: 20px 0 0 0;
+    padding: 0 10px 0 10px;
 }
 
 .detail_content > h4, p {
@@ -356,6 +369,8 @@ p > span {
     flex-direction: row;
     align-items: center;
     padding: 0;
+    border-left: 1px solid #ebf2fa;
+    border-bottom: 1px solid #ebf2fa;
 }
 
 .nav_panel_social_li, .about_social_li, .demo_li {
@@ -409,14 +424,22 @@ p > span {
 }
 
 .project:hover {
-    box-shadow: 1px 1px 1px #a5be00;
+    box-shadow: 2px 2px 2px #a5be00;
+}
+
+.recent_project_list{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 1000px;
+
 }
 
 .project_title {
     position: absolute;
     width: 100%;
     top: 0;
-    padding: 0 20% 0 20%;
+    padding: 0 5% 0 5%;
     background-color: #ffffff;
     border-bottom: 1px solid #ebf2fa;
     border-radius: 1px;
@@ -426,32 +449,34 @@ p > span {
     display: flex;
     flex-direction: row;
     align-items: center;
-    align-content: space-evenly;
+    justify-content: center;
     position: absolute;
     width: 100%;
     bottom: 0;
-    padding: 0 25% 0 25%;
+    padding: 5px;
     background-color: #ffffff;
     border-top: 1px solid #ebf2fa;
     border-radius: 1px;
 }
 
 .detail_stack_ul {
-    flex: 1;
+    flex: 3;
     display: flex;
     flex-direction: row;
     align-items: center;
     align-content: space-between;
     width: 100%;
     bottom: 0;
-    padding: 0 5% 0 5%;
+    padding: 0;
+    border-left: 1px solid #ebf2fa;
+    border-right: 1px solid #ebf2fa;
+    border-bottom: 1px solid #ebf2fa;
     background-color: #ffffff;
 }
 
 .stack_icon_li {
     flex: 1;
     display: flex;
-    padding: 2px;
     align-items: center;
     align-self: center;
     min-height: 33px;
@@ -474,7 +499,6 @@ p > span {
     border-radius: 5px;
 }
 .ph1 {
-    text-align: left;
     width: 318px;
     padding: 25px 0 35px 0;
     /*margin: 5px;*/
@@ -486,16 +510,26 @@ p > span {
     min-height: 200px;
     width: 318px;
     padding: 0;
-    margin: 0 0 30px 0;
+    margin: 0 15px 30px 15px;
     color: #05668d;
     background-color: #ebf2fa;
     border: 1px #ebf2fa solid;
     border-radius: 5px;
-    box-shadow: 1px 1px #ebf2fa;
+    /*box-shadow: 1px 1px #ebf2fa;*/
     cursor: pointer;
 }
 
+
 @media only screen and (min-width: 525px) {
+    /*.html5_icon,*/
+    /*.javascript_icon,*/
+    /*.jquery_icon,*/
+    /*.react_icon,*/
+    /*.nodejs_icon,*/
+    /*.postgresql_icon  {*/
+    /*    width: 32px;*/
+    /*    height: 32px;*/
+    /*}*/
 
     .nav_bar {
         display: flex;
