--- a/main.css
+++ b/main.css
@@ -20,11 +20,24 @@ body {
     flex: 1 0 auto;
 }
 
+.footer_image{
+    margin-top: 10px
+}
+
+.body_image > img,
+.footer_image > img{
+    width: 100%;
+    border-radius: 5px;
+}
+
 footer {
     flex-shrink: 0;
     margin-top: 5px;
+    padding: 10px 0 0 0;
     background-color: #05668d;
     box-shadow: 0 -2px 2px -2px #a5be00;
+    height: 100%;
+    max-height: 45px;
 }
 
 nav {
@@ -40,7 +53,7 @@ nav {
 }
 
 .monuments {
-    background: url('./images/monuments_cover.png') no-repeat center center;
+    background: url('./images/monuments/monuments_cover.png') no-repeat center center;
     background-size: cover;
     border-radius: 5px;
     height: 100%;
@@ -48,7 +61,7 @@ nav {
 }
 
 .riskbudget {
-    background: url('./images/riskbudget_cover.png') no-repeat center center;
+    background: url('./images/riskbudget/riskbudget_cover.png') no-repeat center center;
     background-size: cover;
     border-radius: 5px;
     height: 100%;
@@ -56,7 +69,7 @@ nav {
 }
 
 .ciclismo {
-    background: url('./images/ciclismo_cover.png') no-repeat center center;
+    background: url('./images/ciclismo/ciclismo_cover.png') no-repeat center center;
     background-size: cover;
     border-radius: 5px;
     height: 100%;
@@ -64,7 +77,7 @@ nav {
 }
 
 .velonotes {
-    background: url('./images/velonotes_cover.png') no-repeat center center;
+    background: url('./images/velonotes/velonotes_cover.png') no-repeat center center;
     background-size: cover;
     border-radius: 5px;
     height: 100%;
@@ -72,58 +85,46 @@ nav {
 }
 
 .html5_icon {
-    background: url('./images/html5_icon.png') no-repeat center center;
+    background: url('./images/icons/html5_icon.png') no-repeat center center;
 }
 .javascript_icon {
-    background: url('./images/javascript_icon.png') no-repeat center center;
+    background: url('./images/icons/javascript_icon.png') no-repeat center center;
 }
 .jquery_icon {
-    background: url('./images/jquery_icon_3.png') no-repeat center center;
+    background: url('./images/icons/jquery_icon_3.png') no-repeat center center;
 }
 .react_icon {
-    background: url('./images/react_icon.png') no-repeat center center;
+    background: url('./images/icons/react_icon.png') no-repeat center center;
 }
 .nodejs_icon {
-    background: url('./images/nodejs_icon_3.png') no-repeat center center;
+    background: url('./images/icons/nodejs_icon_3.png') no-repeat center center;
 }
 .postgresql_icon {
-    background: url('./images/postgresql_icon.png') no-repeat center center;
+    background: url('./images/icons/postgresql_icon.png') no-repeat center center;
 }
-
-/*.html5_icon,*/
-/*.javascript_icon,*/
-/*.jquery_icon,*/
-/*.react_icon,*/
-/*.nodejs_icon,*/
-/*.postgresql_icon  {*/
-/*    max-width: 24px;*/
-/*    width: 24px;*/
-/*    max-height: 24px;*/
-/*    height: 24px;*/
-/*}*/
 
 .stack_icon_li > a {
     display:block;
 }
 
 .java_icon {
-    background: url('./images/java_icon.png') no-repeat center center;
+    background: url('./images/icons/java_icon.png') no-repeat center center;
 }
 .td3_logo {
-    background: url('./images/td3_logo_white_blue_45x45.png') no-repeat left center;
+    background: url('./images/icons/td3_logo_white_blue_45x45.png') no-repeat left center;
     height: 45px;
     width: 45px;
 }
 
 .td3_logo {
-    background: url('./images/td3_logo_white_blue_45x45.png') no-repeat left center;
+    background: url('./images/icons/td3_logo_white_blue_45x45.png') no-repeat left center;
     height: 45px;
     width: 45px;
     cursor: pointer;
 }
 
 .td3_logo:hover {
-    background: url('./images/td3_logo_white_green_45x45.png') no-repeat left center;
+    background: url('./images/icons/td3_logo_white_green_45x45.png') no-repeat left center;
 }
 
 .logo {
@@ -339,11 +340,17 @@ p > span {
     color: #a5be00;
 }
 
-.nav_panel_social_ul, .about_social_ul {
+.nav_panel_social_ul,
+.about_social_ul {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     padding: 10px;
+}
+
+.about_social_ul {
+    width: 120px;
 }
 
 .detail {
@@ -361,6 +368,7 @@ p > span {
 
 .detail_content > h4, p {
     padding: 5px 0 5px 0;
+    white-space: pre-line;
 }
 
 .demo_ul {
@@ -440,7 +448,8 @@ p > span {
     width: 100%;
     top: 0;
     padding: 0 5% 0 5%;
-    background-color: #ffffff;
+    font-weight: bold;
+    background-color: #ebf2fa;
     border-bottom: 1px solid #ebf2fa;
     border-radius: 1px;
 }
@@ -454,7 +463,7 @@ p > span {
     width: 100%;
     bottom: 0;
     padding: 5px;
-    background-color: #ffffff;
+    background-color: #ebf2fa;
     border-top: 1px solid #ebf2fa;
     border-radius: 1px;
 }
@@ -565,6 +574,11 @@ p > span {
         flex-direction: column;
         width: 500px;
         padding: 5% 0 20px 0;
+    }
+
+    .detail_header > img {
+        width: 500px;
+        min-width: 500px;
     }
 
     .landing_img > img {
